[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/piedras2.gd" type="Script" id=1]
[ext_resource path="res://textures/natural/unknown.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.4891
height = 60.1431

[node name="piedras2" type="Area2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -24, 10 )
rotation = -0.771687
shape = SubResource( 1 )

[node name="piedras2" type="StaticBody2D" parent="."]

[node name="Sprite2" type="Sprite" parent="piedras2"]
rotation = 0.261799
texture = ExtResource( 2 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="piedras2"]
position = Vector2( -46.5051, -17.4949 )
polygon = PoolVector2Array( 19.9254, -15.2455, 11.4816, -18.9763, 5.58234, -23.4597, 5.81836, -17.0886, 16.2009, -9.53757, 28.9432, -2.4585, 47.6754, 15.7545, 66.2635, 36.4439, 80.5663, 44.3899, 35.4254, -11.2455 )

[connection signal="body_entered" from="." to="." method="_on_piedras2_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_piedras2_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
